more scroll bar/table fixes/font fixes, now scroll bar is nice and visible on mobile, on browser, etc

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -9,6 +9,31 @@ hr.vertical {
     width:0;
     border:1px solid black;
 }
+ ::-webkit-scrollbar {
+    width: 12px !important;
+    height: 8px !important;
+ }
+
+ /* Track */
+::-webkit-scrollbar-track {
+   -webkit-box-shadow: inset 0 0 1px rgba(0,0,0,0.2) !important;
+   -webkit-border-radius: 10px !important;
+   border-radius: 10px !important;
+ }
+
+ /* Handle */
+ ::-webkit-scrollbar-thumb {
+   -webkit-border-radius: 10px !important;
+   border-radius: 10px !important;
+   background: #1862a1 !important; 
+   -webkit-box-shadow: inset 0 0 1px rgba(0,0,0,0.2) !important; 
+
+ }
+ ::-webkit-scrollbar-thumb:window-inactive {
+   -webkit-border-radius: 10px !important;
+   border-radius: 10px !important;
+   background: #1862a1 !important; 
+ }
 .innerbar {
     height:1px;
     border-width:0;
